# fastapi-backend

./: .env.example  .env.test  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  GEMINI.md  LICENSE  README.md  docker-compose.yml  justfile  mkdocs.yml  prek.toml  pyproject.toml  zensical.toml
.github/workflows/: ci.yml  docs.yml
alembic/: env.py
alembic/versions/: f12be3ba3b04_init.py
app/: api.py  main.py
app/core/: config.py  exception_handlers.py  exceptions.py  logging.py  metadata.py  middlewares.py  openapi.py  telemetry.py
app/db/: base.py  session.py
app/modules/system/: __init__.py  routes.py
app/modules/user/: __init__.py  models.py  repository.py  routes.py  schemas.py  service.py
app/static/css/: styles.css
app/templates/: index.html
docs/: index.md
docs/api/: core.md  overview.md  user.md
docs/architecture/: design-decisions.md  overview.md
docs/design/: prd.md
docs/guides/: api-overview.md  api-structure.md  configuration.md  database-migrations.md  deployment.md  error-handling.md  getting-started.md  observability.md  quality-checks.md  release-workflow.md  testing.md  troubleshooting.md
docs/project/: changelog.md  contributing.md  license.md
scripts/: bump_version.py  sync_docs.py  tag_release.py
tests/: conftest.py  test_db.py  test_main.py
tests/core/: test_config.py  test_exceptions.py  test_logging.py  test_middlewares.py  test_openapi.py  test_telemetry.py
tests/modules/system/: test_routes.py
tests/modules/user/: test_exceptions.py  test_routes.py
