[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastapi-backend"
version = "0.1.0"
description = "FastAPI Backend"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Balakumaran Manoharan", email = "bala@balakmran.dev" }
]
dependencies = [
    "fastapi[standard]>=0.121.3",
    "sqlmodel>=0.0.27",
    "psycopg[binary]>=3.2.13",
    "structlog>=25.5.0",
    "pydantic-settings>=2.12.0",
    "alembic>=1.17.2",
    "greenlet>=3.1.1",
    "asyncpg>=0.31.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "ruff>=0.14.6",
    "ty>=0.0.1a27",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pre-commit>=4.5.0",
    "httpx>=0.28.1",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.0",
    "mkdocstrings[python]>=0.30.1",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "PL", "RUF", "D"]
ignore = ["D100", "D104"] # Ignore missing docstring in public module/package
pydocstyle.convention = "google"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]

[tool.coverage.run]
source = ["app"]
branch = true
concurrency = ["thread", "greenlet"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
show_missing = true
