[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastapi-backend"
version = "0.3.0"
description = "High-Performance, Scalable API Foundation"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Balakumaran Manoharan", email = "bala@balakmran.dev" }
]
dependencies = [
    "fastapi[standard]>=0.121.3",
    "sqlmodel>=0.0.27",
    "psycopg[binary]>=3.2.13",
    "structlog>=25.5.0",
    "pydantic-settings>=2.12.0",
    "alembic>=1.17.2",
    "greenlet>=3.1.1",
    "asyncpg>=0.31.0",
    "jinja2>=3.1.6",
    "opentelemetry-api>=1.39.1",
    "opentelemetry-sdk>=1.39.1",
    "opentelemetry-exporter-otlp>=1.39.1",
    "opentelemetry-instrumentation-fastapi>=0.60b1",
]

[project.urls]
Repository = "https://github.com/balakmran/fastapi-backend"
Documentation = "https://balakmran.github.io/fastapi-backend/"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
    "ty>=0.0.15",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "prek>=0.3.2",
    "httpx>=0.28.1",
]
docs = [
    "zensical",
]

[tool.ruff]
line-length = 80
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "PL", "RUF", "D"]
ignore = ["D100", "D104"] # Ignore missing docstring in public module/package
pydocstyle.convention = "google"

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.params.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
    "fastapi.Security",
    "fastapi.Header",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]

[tool.coverage.run]
source = ["app"]
branch = true
concurrency = ["thread", "greenlet"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
show_missing = true
